--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,54 +7,68 @@
 # ******** NOTE ********
 # We have attempted to detect the languages in your repository. Please check
 # the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
 #
-name: "CodeQL"
-on:  push:
-    branches: [
- 
-    "master", "C*" ]
-  pull_request:  .branches:
-  [ "master
-    , "C*"
-    ]
-  schedule:
-    - cron: '21 0 * * 2'
-jobs:
+supported CodeQL 
+languages.# 
+name:
+ "CodeQL"
+on push:
+l. branches
+["master", "C*" 
+]pull_request: 
+.branches:
+  [ 
+  "master, 
+  "C*, ]  schedule:
+    - cron: 
+    '21 0 * * 2' jobs:
   analyze:
-    name: Analyze
-    # Runner size impacts CodeQL analysis time. To learn more, please see    #   - https://gh.io/recommended-hardware-resources-for-running-codeql   #   - https://gh.io/supported-runners-and-hardware-resources  #   - https://gh.io/using-larger-runners# Consider using larger runners for possible analysis time improvements.
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
-    permissions:   # required for all workflows
-      security-events: write    # only required for workflows in private repositories
-      actions: read
+    name:
+    Analyze
+    # Runner size impacts 
+    CodeQL analysis time. To learn more, please see    #   - https://gh.io/recommended-hardware-resources-for-running-codeql   #   - https://gh.io/supported-runners-and-hardware-resources  #   - https://gh.io/using-larger-runners# Consider using larger runners for possible analysis time improvements.
+    runs-on: ${{ (matrix.
+    language == 'swift' & 
+    & 'macos-latest') ||
+    'ubuntu-latest' }}
+    timeout-minutes: 
+    ${{ (matrix.language == 
+    'swift' & 
+    & 120) ||
+    360 }}
+    permissions:   
+    # required for all workflows   security-events: write 
+      # only required for workflows in private repositories  actions: read
       contents: read
     strategy:
-    
-      fail-fast: false 
+      fail-fast [false]
       matrix:
-        language: 
-        [ '  __
+        language: [ '  __    
         _python'_
-        __ ]
-        # CodeQL supports 
+    __ ] # CodeQL supports 
         [ 'c-cpp', 'csharp', 'go', 'java-kotlin',
         'javascript-typescript',
         'python', 'ruby', 
         'swift'
         ]# 
-Use only
-       'java-kotlin' to analyze code written in Java, 
-       Kotlin or both# Use only 'javascript-typescript' to analyze code written in JavaScript,
+Use only.   [no write 
+/ read _only 
+       'java-kotlin' to analyze code written
+       i
+       n Java, 
+       Kotlin or both# Use only 'j
+       avascript-typescript' to 
+       analyze code written in JavaScript,
        TypeScript or both   # Learn more about CodeQL language support 
-       at
-       [https://aka.ms/codeql_docs](language-support)
-    steps:
+       at [https://aka.ms/codeql_docs](language-support)
+    steps: install dep
+- scan 
     - name: Checkout repository
       uses: actions/checkout@v4
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
+    # Initializes the CodeQL
+    tools for scanning.
+    - name: Initialize
+    CodeQL
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}    # If you wish to specify 
